--- a/bp-stylesheet.css
+++ b/bp-stylesheet.css
@@ -9,7 +9,7 @@ body{
     min-height: 100vh;
 }
 .footer {
-    background-color: #1E90FF;
+    background-color: #1E90F;
     border-radius: 0.6em;
     position: sticky;
     top: 100%;
